--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "format:fix": "prettier --wire --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/material": "^5.15.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "axios": "^1.5.1",
     "daisyui": "^3.9.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
